Fix for bug#5551 (Version 4). The idea of the fix is that the administrative statements OPTIMIZE TABLE, REPAIR TABLE and ANALYZE TABLE should not generate binlog errors if there is no errors on the master.

sql/sql_parse.cc:
  No binlog error generated
sql/sql_table.cc:
  Documentation
BitKeeper/etc/logging_ok:
  Logging to logging@openlogging.org accepted